<resources>
    <string name="app_name">Calculatrice</string>

    <string name="ac">AC</string>
    <string name="plusminus">+/-</string>
    <string name="percent">%</string>
    <string name="divide">/</string>
    <string name="multiply">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="point">.</string>

    <string name="bt_9">9</string>
    <string name="bt_8">8</string>
    <string name="bt_7">7</string>
    <string name="bt_6">6</string>
    <string name="bt_5">5</string>
    <string name="bt_4">4</string>
    <string name="bt_3">3</string>
    <string name="bt_2">2</string>
    <string name="bt_1">1</string>
    <string name="bt_0">0</string>
    <string name="historique">Historique</string>

</resources>
