<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        tools:text="Hello World!"
        app:layout_constraintBottom_toTopOf="@+id/keyboard"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#fff"
        android:gravity="bottom|right"
        android:textSize="64sp"
        android:paddingEnd="30dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_result"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <!-- Ligne 1-->
        <LinearLayout
            android:id="@+id/bt_ac_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_ac"
                style="@style/ButtonLight"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClick"
                android:tag="AC"
                android:text="@string/ac"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_plusminus_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_ac_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_plusminus"
                style="@style/ButtonLight"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClick"
                android:tag="OP"
                android:text="@string/plusminus"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_percent_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_plusminus_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_percent"
                style="@style/ButtonLight"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/percent"
                android:onClick="onClick"
                android:tag="OP"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_divide_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_percent_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_divide"
                style="@style/ButtonPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:onClick="onClick"
                android:tag="OP"
                />
        </LinearLayout>



        <!-- Ligne 2 -->

        <LinearLayout
            android:id="@+id/bt_7_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_ac_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_7"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_7"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_8_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_7_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_ac_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_8"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_8"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_9_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_8_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_ac_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_9"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_9"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_multiply_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_9_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_ac_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_multiply"
                style="@style/ButtonPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:onClick="onClick"
                android:tag="OP"
                />
        </LinearLayout>


        <!-- Ligne 3 -->

        <LinearLayout
            android:id="@+id/bt_4_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_7_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_4"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_4"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_5_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_4_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_8_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_5"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_5"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_6_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_5_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_9_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_6"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_6"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_minus_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_6_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_multiply_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_minus"
                style="@style/ButtonPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:onClick="onClick"
                android:tag="OP"
                />
        </LinearLayout>

        <!-- Ligne 4 -->

        <LinearLayout
            android:id="@+id/bt_1_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_4_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_1"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_1"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_2_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_1_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_5_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_2"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_2"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_3_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_2_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_6_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_3"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_3"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_plus_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_3_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_minus_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_plus"
                style="@style/ButtonPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:onClick="onClick"
                android:tag="OP"
                />
        </LinearLayout>

        <!-- Ligne 5 -->

        <LinearLayout
            android:id="@+id/bt_0_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintWidth_percent="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_1_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_0"
                style="@style/ButtonRectangle"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_0"
                android:textAlignment="textStart"
                android:paddingStart="25dp"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_comma_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_0_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_3_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_point"
                style="@style/ButtonDark"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/point"
                android:onClick="onClick"
                android:tag="NB"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bt_equals_wrap"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="0.25"
            app:layout_constraintStart_toEndOf="@id/bt_comma_wrap"
            app:layout_constraintTop_toBottomOf="@id/bt_plus_wrap"
            android:padding="@dimen/padding">

            <Button
                android:id="@+id/bt_equals"
                style="@style/ButtonPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/equals"
                android:onClick="onClick"
                android:tag="EQ"
                />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>